--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,10 @@
 <!--
-    *   Idee und geschrieben von BlackDayz
-    *   
-    *   Copyright 2020 BlackDayz
-    *
-    *   Das Verändern und Kopieren der Website ist nicht gestattet!
-    *
-    *   Anfragen an produce@blackdayz.de oder über Social Media (Instagram) @blackdayz_de
-    *
-    *
-
-    ***BlackDayz | Video Creator und Entwickler***
-
+ ____  _            _    ____                            _
+| __ )| | __ _  ___| | _|  _ \  __ _ _   _ ____       __| | ___
+|  _ \| |/ _` |/ __| |/ / | | |/ _` | | | |_  /      / _` |/ _ \
+| |_) | | (_| | (__|   <| |_| | (_| | |_| |/ /   _  | (_| |  __/
+|____/|_|\__,_|\___|_|\_\____/ \__,_|\__, /___| (_)  \__,_|\___|
+                                     |___/
 -->
 
 <!DOCTYPE html>
@@ -18,46 +12,57 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-  <html class="no-js" lang="de">
-    <!--<![endif]-->
+<html class="no-js" lang="de">
+  <!--<![endif]-->
+
   <head>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://www.blackdayz.de/Library/CSS/V0_0_1/BlackCSS.css" />
+    <title>
+      <%= htmlWebpackPlugin.options.title %>
+    </title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="copyright" content="BlackDayz &copy; 2020">
-        <meta http-equiv="content-language" content="de">
-        <meta name="author" content="BlackDayz &copy;" />
-        <meta name="robots" content="index, follow" />
-        <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="31536000">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description"
-            content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
-        <meta name="keywords"
-            content="video, video Creator, Creator, künstler, musikvideos, eventvideos, Imagefilme, web, webentwickler, Web Entwickler, html, css, javascript, php, blackdayz, blackdayz_de, blackdayz.de">
-        <meta name="reply-to" content="info@blackdayz.de">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="copyright" content="BlackDayz &copy; 2020">
+    <meta http-equiv="content-language" content="de">
+    <meta name="author" content="BlackDayz &copy;" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="cache-control" content="31536000">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+      content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
+    <meta name="keywords"
+      content="video, video Creator, Creator, künstler, musikvideos, eventvideos, Imagefilme, web, webentwickler, Web Entwickler, html, css, javascript, php, blackdayz, blackdayz_de, blackdayz.de">
+    <meta name="reply-to" content="info@blackdayz.de">
 
-        <!--Open Graph-->
-        <meta property="og:site_name" content="BlackDayz" />
-        <meta property="og:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png">
-        <meta property="og:title" content="BlackDayz &hybull; Video Creator und Entwickler">
-        <meta property="og:description"
-            content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://www.blackdayz.de/" />
-        <meta property="og:locale" content="de_DE" />
+    <!--Open Graph-->
+    <meta property="og:site_name" content="BlackDayz" />
+    <meta property="og:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png">
+    <meta property="og:title" content="BlackDayz &hybull; Video Creator und Entwickler">
+    <meta property="og:description"
+      content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.blackdayz.de/" />
+    <meta property="og:locale" content="de_DE" />
 
-        <!--Twitter-->
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="BlackDayz &hybull; Video Creator und Entwickler" />
-        <meta name="twitter:description"
-            content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
-        <meta name="twitter:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png" />
+    <!--Twitter-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BlackDayz &hybull; Video Creator und Entwickler" />
+    <meta name="twitter:description"
+      content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
+    <meta name="twitter:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png" />
 
   </head>
+
   <body>
-    
+
     <!--[if lt IE 7]>
       <div class="outdated center white font bold big absolute">
         <p class="absolute">You are using an <strong>outdated</strong> browser. Please <a href="https://browser-update.org/">upgrade your browser</a> to improve your experience.</p>
@@ -65,9 +70,11 @@
     <![endif]-->
 
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+          Please enable it to continue.</strong>
     </noscript>
 
     <div id="app"></div>
   </body>
+
 </html>
