test: testing website deployment

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
         <link rel="shortcut icon" href="./shortcuticon.png" />
         <link rel="apple-touch-icon" href="./shortcuticon.png" />
 
-        <title>Test <%= htmlWebpackPlugin.options.title %></title>
+        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
 
     <body>
