--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
     <head>
         <!--
@@ -22,10 +22,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             name="description"
-            content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis." />
+            content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis."
+        />
         <meta
             name="keywords"
-            content="ichsuchearbeit, web, webentwickler, Web Entwickler, html, css, javascript, php, blackdayz, blackdayz_de, blackdayz.de, nodejs, vue3, yii2" />
+            content="ichsuchearbeit, web, webentwickler, Web Entwickler, html, css, javascript, php, blackdayz, blackdayz_de, blackdayz.de, nodejs, vue3, yii2"
+        />
         <meta name="reply-to" content="info@blackdayz.de" />
 
         <!--Open Graph-->
@@ -34,7 +36,8 @@
         <meta property="og:title" content="BlackDayz &hybull; Junior Web Developer" />
         <meta
             property="og:description"
-            content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis." />
+            content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis."
+        />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://www.blackdayz.de/" />
         <meta property="og:locale" content="de_DE" />
